<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"> 
    <PreferenceCategory android:title="@string/graphic">
        
        <EditTextPreference android:key="engine.graphic.fps.max"
                            android:inputType="numberSigned"
                            android:defaultValue="30"
                            android:title="@string/maximum_fps"
                            android:summary="@string/maximum_fps_summary" />
        
        <ListPreference android:key="engine.graphic.antialiasing" 
                        android:title="@string/antialiasing"
                        android:entries="@array/antialiasing_option_names"
                        android:entryValues="@array/antialiasing_option_values"
                        android:defaultValue="DEFAULT"                                                
                        android:summary="@string/antialiasing_summary" />
        
        <CheckBoxPreference android:key="engine.graphic.dithering" 
                            android:title="@string/dithering"                        
                            android:defaultValue="true" />
        
        <CheckBoxPreference android:key="engine.graphic.multisampling" 
                            android:title="@string/multisampling"                        
                            android:defaultValue="true" />
        
    </PreferenceCategory>
</PreferenceScreen>